dev: package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TapSwap-amm",
+  "name": "tapwap-amm-pcs-v1",
   "description": "Pancakeswap Interface",
   "version": "1.0.0",
   "homepage": ".",
